k8s/distributedequity-org/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: distributedequity-org
  namespace: distributedequity-org
spec:
  replicas: 1
  selector:
    matchLabels:
      app: distributedequity-org
  template:
    metadata:
      labels:
        app: distributedequity-org
    spec:
      containers:
        - name: distributedequity-org
          image: kevinryanacr.azurecr.io/distributedequity-org:5dba0d5
          ports:
            - containerPort: 8080
          livenessProbe:
            httpGet:
              path: /healthz
              port: 8080
            initialDelaySeconds: 5
            periodSeconds: 10
          readinessProbe:
            httpGet:
              path: /healthz
              port: 8080
            initialDelaySeconds: 3
            periodSeconds: 5
          resources:
            requests:
              cpu: 5m
              memory: 8Mi
            limits:
              cpu: 50m
              memory: 32Mi
