k8s/distributedequity-org/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: distributedequity-org
  namespace: distributedequity-org
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`distributedequity.org`) || Host(`www.distributedequity.org`)
      kind: Rule
      services:
        - name: distributedequity-org
          port: 80
  tls: {}
